compiler/testData/diagnostics/tests/kt435.fir.kt
fun Any.foo1() : (i : Int) -> Unit {
    return {}
}

fun test(a : Any) {
    a.<!INAPPLICABLE_CANDIDATE!>foo1<!>()()
}